--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500&family=Roboto:wght@400;500;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  scroll-padding: 0;
+  scroll-margin: 0;
+  box-sizing: border-box;
+  list-style: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  color: #2c2727;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+:root {
+  --bg: #fffff4;
+  --bg-nav: #fffff2;
+  --nav-size: 50px;
+  --text: 400 14px Roboto, sans-serif;
+  --text-color: #2c2727;
+  --border: 1px solid #f9f1f1;
+  --border-radius: 8px;
+  --speed: 500ms;
+  --spot-color: #1db954;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font: 400 14px Roboto, sans-serif;
+  background: var(--bg);
+  -webkit-font-smoothing: antialiased;
+}
+
+input,
+button,
+textarea {
+  font: 400 18px Roboto, sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: 100vh;
+  margin: 10px;
+}
+
+.game-mode {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.teams {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  height: 100%;
+}
+
+.info {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: flex-start;
+}
+
+.team-info {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin: 10px;
+}
+
+.add-points {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.add-points input {
+  width: 50%;
+  height: 25px;
+  border: 1px solid #f9f1f1;
+  border-radius: 8px;
+  padding: 0 10px;
+  margin: 10px;
+}
+
+.add-points button {
+  width: 20%;
+  height: 25px;
+  background: #d80100;
+  border: 0;
+  border-radius: 1px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-weight: bold;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  font-size: 10px;
 }
