--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,15 @@ a {
   height: 100%;
 }
 
+.solo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  height: 100%;
+}
+
 .info {
   width: 100%;
   height: 100%;
